fix: overflow-y set to scroll at body

--- a/src/index.css
+++ b/src/index.css
@@ -35,14 +35,12 @@
   --menu-padding:0 1vw 0.4vw 1vw;
   --menu-row-gap:9px;
   --tutorial-column-gap:40px;
-  --step-width:700px;
 }
 
 #root {
   max-width: 1280px;
-  /*margin: 0 auto;*/
-  padding-left: 75px;
-  /*padding: 2rem;*/
+  margin: 0 auto;
+  padding: 2rem;
 }
 
 a {
@@ -57,9 +55,13 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  /*place-items: center;*/
+  place-items: center;
   min-width: 320px;
   /*min-height: 100vh;*/
+
+
+  overflow-y: scroll;
+  /*scrollbar-gutter: stable both-edges;*/
 }
 
 h1 {
